2011-05-26  Glenn Morris  <rgm@gnu.org>

	* gnus-group.el (gnus-bug-group-download-format-alist):
	Use the "maintainer" version of debbugs.gnu.org reports.

2011-05-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-mime-delete-part): Fix mm-handle-filename usage.

2011-05-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-cus.el (gnus-agent-customize-category):
	* gnus-delay.el (gnus-delay-send-queue):
	* gnus.el (gnus-other-frame):
	Don't quote lambda expressions with `quote'.

2011-05-20  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-sum.el (gnus-summary-hide-thread): Fix bug where moving to hide
	the thread moves us backwards and so we loop forever.

2011-05-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-bodies.el (mm-decode-content-transfer-encoding): Allow leading
	whitespace in base64 data lines.

2011-05-18  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-user-format-function-M):
	Use `mapconcat'.
	(gnus-registry-user-format-function-M2): Use to see the full text of
	the marks.  Make "," the mark text separator.

	* nntp.el (nntp-send-authinfo): Use the "force" token for NNTP
	authentication with auth-source.

2011-05-17  Glenn Morris  <rgm@gnu.org>

	* gnus-group.el (gnus-import-other-newsrc-file):
	Use insert-file-contents.

2011-05-16  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-sum.el (gnus-summary-hide-all-threads): Add update message every
	1000 iterations.

2011-05-16  Katsumi Yamaoka  <yamaoka@jpl.org>

	* nntp.el (nntp-open-connection): Check if process-type is available.

2011-05-16  Julien Danjou  <julien@danjou.info>

	* shr.el (shr-tag-del): Add support for del tag.

2011-05-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-html.el (gnus-html-put-image): Register a displayer.

	* shr.el (shr-image-displayer): Don't remove text props from alt text.

2011-05-13  Teodor Zlatanov  <tzz@lifelogs.com>

	* registry.el (prune-factor): New initialization parameter defaulting
	to 0.1.
	(registry-prune-hard): Use it.
